--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,25 @@
   <header class="header">
     <h1>Todos</h1>
     <input class="new-todo" placeholder="What needs to be done?" autofocus="" [(ngModel)]="newTodo.title" (keyup.enter)="addTodo()">
+    <div class="container" style="text-align: center">
+      <input class="toggle-showComplete" type="checkbox" (click)="toggleTodoViewComplete(todo)" [checked]="viewComplete">Show complete
+    </div>
   </header>
   <section class="main" *ngIf="todos.length > 0">
     <ul class="todo-list">
       <li *ngFor="let todo of todos" [class.completed]="todo.complete">
-        <div class="view">
+        <div class="view" *ngIf="todo.complete == false && this.viewComplete == false" >
+          <button class="edit" (click)="todo.edit = true" > Edit</button>          
           <input class="toggle" type="checkbox" (click)="toggleTodoComplete(todo)" [checked]="todo.complete">
           <label>{{todo.title}}</label>
+          <input #updatedTodo *ngIf="todo.edit == true" class="view" [value] = "todo.title" (keyup.enter)="updateTodo(todo, updatedTodo.value)">
+          <button class="destroy" (click)="removeTodo(todo)"></button>
+        </div>
+        <div class="view" *ngIf="todo.complete == true && this.viewComplete == true" >
+          <button class="edit" (click)="todo.edit = true" > Edit</button>          
+          <input class="toggle" type="checkbox" (click)="toggleTodoComplete(todo)" >
+          <label >{{todo.title}}</label>
+          <input #updatedTodo *ngIf="todo.edit == true" class="view" [value] = "todo.title" (keyup.enter)="updateTodo(todo, updatedTodo.value)">
           <button class="destroy" (click)="removeTodo(todo)"></button>
         </div>
       </li>
